--- a/Pset9/birthdays/templates/index.html
+++ b/Pset9/birthdays/templates/index.html
@@ -20,8 +20,7 @@
                     <input name="month" placeholder="Month" type="number" min="1" max="12">
                     <input name="day" placeholder="Day" type="number" min="1" max="31">
                     <input type="submit" value="Add Birthday">
-                </form></td>
-                    </tr>
+                </form>
             </div>
 
             <div class="section">
